--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "bugs": {
     "url": "https://github.com/bolub/BOOTSTRAP-4/issues"
   },
-  "homepage": "https://github.com/bolub/BOOTSTRAP-4#readme",
+  "homepage": "https://github.com/bolub/BOOTSTRAP-4#app.js",
   "dependencies": {
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
